# raria

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  claim-inventory.yml  exported-surface.yml  key-capability-gate.yml  ownership-adr.yml  parity-ledger.yml  phase-exit.yml  release-claim-gate.yml  release.yml
.omx/: notepad.md
.omx/context/: rust-aria2-rewrite-alignment-20260420T095658Z.md
.omx/interviews/: rust-aria2-rewrite-alignment-20260420T095658Z.md
.omx/specs/: deep-interview-rust-aria2-rewrite-alignment.md
crates/raria-bt/: Cargo.toml
crates/raria-bt/src/: lib.rs  service.rs  torrent_meta.rs  webseed.rs
crates/raria-bt/tests/: bt_gap_ledger.rs  bt_smoke.rs  dht_persistence.rs
crates/raria-cli/: Cargo.toml
crates/raria-cli/src/: backend_factory.rs  bt_runtime.rs  conditional_get.rs  daemon.rs  executor_config.rs  hooks.rs  main.rs  single.rs  util.rs
crates/raria-cli/tests/: bt_tracker_smoke.rs  native_api_smoke.rs  rpc_smoke.rs  session_smoke.rs  sftp_smoke.rs  single_download.rs
crates/raria-core/: Cargo.toml
crates/raria-core/src/: cancel.rs  checksum.rs  config.rs  config_file.rs  engine.rs  file_alloc.rs  input_file.rs  job.rs  lib.rs  limiter.rs  logging.rs  native.rs  native_config.rs  persist.rs  progress.rs  registry.rs  rename.rs  scheduler.rs  segment.rs  service.rs  speed.rs
crates/raria-core/tests/: input_file.rs  island_wiring.rs  job_options_integration.rs  native_config.rs  segment_checkpoint.rs  service_integration.rs
crates/raria-ftp/: Cargo.toml
crates/raria-ftp/src/: backend.rs  lib.rs
crates/raria-ftp/tests/: ftp_smoke.rs  ftps_smoke.rs
crates/raria-http/: Cargo.toml
crates/raria-http/src/: backend.rs  content_disposition.rs  cookies.rs  lib.rs
crates/raria-http/tests/: http_config_smoke.rs  if_range.rs
crates/raria-metalink/: Cargo.toml
crates/raria-metalink/src/: lib.rs  normalizer.rs  parser.rs
crates/raria-range/: Cargo.toml
crates/raria-range/src/: backend.rs  executor.rs  lib.rs
crates/raria-rpc/: Cargo.toml
crates/raria-rpc/src/: api.rs  events.rs  facade.rs  lib.rs  methods.rs  server.rs
crates/raria-rpc/tests/: bt_dispatch.rs  global_stat.rs  health_check.rs  http_cors.rs  metalink_dispatch.rs  multicall_parity.rs  native_api.rs  options_parity.rs  rpc_parity.rs  rpc_secret.rs  ws_parity.rs  ws_push.rs
crates/raria-sftp/: Cargo.toml
crates/raria-sftp/src/: backend.rs  lib.rs
crates/raria-sftp/tests/: sftp_smoke.rs
docs/: bt-stop-lines.md  logging-contract.md  practical-maturity.md  verification-contract.md
docs/adr/: ADR-0001-bt-dht-ownership.md
docs/modernization/: modern-feature-matrix.md  native-architecture.md  progress-log.md  source-audit.md
docs/parity/: bt-gap-ledger.md  bt-transport-tail-blocker.md  evidence-hierarchy.md  export-policy.md  option-tiers.md  protocol-matrix.md  remaining-parity-work.md  rpc-matrix.md  rubric.md
docs/superpowers/plans/: 2026-04-09-complete-rewrite.md  2026-04-10-aria2-rust-rewrite-consensus-plan.md  2026-04-10-aria2-rust-rewrite-product-replacement.md
scripts/parity/: build_bt_gap_index.sh  build_claim_inventory.sh  build_live_rpc_manifest.sh  check_claim_drift.sh  check_exported_surface.sh  check_fk_integrity.sh  check_key_capabilities.sh  check_ledger_schema.sh  check_phase_exit.sh  render_release_claims.sh
