[package]
name = "raria-bt"
description = "BitTorrent download service for raria using librqbit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
raria-core = { workspace = true }
librqbit = "8"
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
librqbit-dht = "5"
tempfile = { workspace = true }
tokio-test = { workspace = true }
serial_test = "3"
