[package]
name = "raria-bt"
description = "BitTorrent download service for raria using librqbit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
raria-core = { workspace = true }
raria-range = { workspace = true }
raria-http = { workspace = true }
raria-ftp = { workspace = true }
raria-sftp = { workspace = true }
librqbit = { version = "8", default-features = false, features = ["rust-tls", "http-api-client"] }
librqbit-bencode = { version = "3", default-features = false, features = ["sha1-ring"] }
librqbit-dht = { version = "5", default-features = false, features = ["sha1-ring"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
url = { workspace = true }
sha1_smol = "1"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
tokio-util = { workspace = true }
serial_test = "3"
wiremock = { workspace = true }
russh = "0.51"
russh-sftp = "2"
