[package]
name = "raria-cli"
description = "CLI binary for raria download utility"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "raria"
path = "src/main.rs"

[dependencies]
raria-core = { workspace = true }
raria-range = { workspace = true }
raria-http = { workspace = true }
raria-ftp = { workspace = true }
raria-sftp = { workspace = true }
raria-rpc = { workspace = true }
raria-metalink = { workspace = true }
raria-bt = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
tokio-util = { workspace = true }
indicatif = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

# librqbit transitively pulls reqwest with default features (native-tls → openssl-sys).
# Vendored openssl builds from source so cross-compilation does not need system headers.
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio-tungstenite = { workspace = true }
nix = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
russh = "0.51"
russh-sftp = "2"
librqbit = "8.1.1"
