[package]
name = "raria-core"
description = "Core scheduling engine for raria download utility"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redb = { workspace = true }
governor = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
