[package]
name = "raria-core"
description = "Core scheduling engine for raria download utility"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
redb = { workspace = true }
governor = { workspace = true }
arc-swap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
sha1 = "0.10"
md-5 = "0.10"
hex = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
