[package]
name = "raria-ftp"
description = "FTP/FTPS download backend for raria"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
raria-core = { workspace = true }
raria-range = { workspace = true }
suppaftp = { version = "8", features = ["tokio", "tokio-async-native-tls"] }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
