[package]
name = "raria-range"
description = "Byte-range download abstraction for HTTP/FTP/SFTP protocols"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
raria-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
governor = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
