[package]
name = "raria-rpc"
description = "JSON-RPC/WebSocket server for raria (aria2-compatible)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
raria-core = { workspace = true }
raria-metalink = { workspace = true }
jsonrpsee = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest = { workspace = true, features = ["json"] }
base64 = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
