[package]
name = "raria-sftp"
description = "SFTP download backend for raria"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
raria-core = { workspace = true }
raria-range = { workspace = true }
russh = "0.51"
russh-sftp = "2"
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
home = "0.5"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
